# notabug

./: Cargo.toml  README.md  pyproject.toml
notabug/: __init__.py
src/: lib.rs
